src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use '@angular/material' as mat;
@use '@ng-matero/extensions' as mtx;

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();

$ppw-primary-palette: (
    50: #e0f3e8,
    100: #b3e1c5,
    200: #80cd9f,
    300: #4db978,
    400: #26aa5b,
    500: #009b3e,
    600: #009338,
    700: #008930,
    800: #007f28,
    900: #006d1b,
    A100: #9cffac,
    A200: #69ff81,
    A400: #36ff56,
    A700: #1dff41,
    contrast: (
        50: #000000,
        100: #000000,
        200: #000000,
        300: #000000,
        400: #ffffff,
        500: #ffffff,
        600: #ffffff,
        700: #ffffff,
        800: #ffffff,
        900: #ffffff,
        A100: #000000,
        A200: #000000,
        A400: #000000,
        A700: #000000
    )
);

// Define the palettes for your theme using the Material Design palettes available in palette.scss
// (imported above). For each palette, you can optionally specify a default, lighter, and darker
// hue. Available color palettes: https://material.io/design/color/
$ppw-ui-primary: mat.define-palette($ppw-primary-palette);
$ppw-ui-accent: mat.define-palette(mat.$blue-palette, 200, 100, 400);

// The warn palette is optional (defaults to red).
$ppw-ui-warn: mat.define-palette(mat.$red-palette);

// Create the theme object. A theme consists of configurations for individual
// theming systems such as "color" or "typography".
$ppw-ui-theme: mat.define-light-theme(
    (
        color: (
            primary: $ppw-ui-primary,
            accent: $ppw-ui-accent,
            warn: $ppw-ui-warn
        ),
        typography: mat.define-typography-config()
    )
);

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include mat.all-component-themes($ppw-ui-theme);
@include mtx.all-component-themes($ppw-ui-theme);

html,
body {
    height: 100%;
}

body {
    margin: 0;
    font-family: Roboto, 'Helvetica Neue', sans-serif;

    .mat-mdc-card-title {
        --mat-card-title-text-size: 16px;
    }

    --ppw-app-wireframe-drawer-width: 250px;

    --ppw-confirmation-dialog-header-background-color: #{mat.get-color-from-palette($ppw-primary-palette, 500)};
    --ppw-confirmation-dialog-header-text-color: #{mat.get-contrast-color-from-palette($ppw-primary-palette, 500)};

    --ppw-expandable-card-header-text-color: white;
    --ppw-expandable-card-header-background-color: #6eb343;
    --ppw-expandable-card-header-indicator-color: white;

    --ppw-message-bar-warning-text-color: black;

    --ppw-sidenav-background-color: #18428c;
    --ppw-sidenav-navigation-item-icon-color: #6eb343;
    --ppw-sidenav-close-button-color: white;

    --ppw-table-row-highlight-background-color: rgba(0, 0, 255, 0.03);

    --ppw-toolbar-page-title-font-size: 20px;
    --ppw-toolbar-page-title-text-color: #18428c;
}

.no-margins {
    margin: 0;
}

.in-page-title {
    margin: 8px 0;
    font-size: 1.1em;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

.flex-grow-1 {
    flex-grow: 1;
}

.flex-basis-50 {
    flex-basis: 50%;
}

.justify-content-between {
    justify-content: space-between;
}

.align-items-center {
    align-items: center;
}

.align-items-stretch {
    align-items: stretch;
}

.align-content-space-between {
    align-content: space-between;
}

.gap-8 {
    gap: 8px;
}

.gap-16 {
    gap: 16px;
}

.padding-top-8 {
    padding: 8px;
}

.padding-8 {
    padding: 8px;
}

.text-right {
    text-align: right;
}

.clickable-list-item {
    transition: all 0.2s;
    cursor: pointer;

    &:hover {
        @include mat.elevation(4);
    }
}

mat-card.highlighted-card {
    background-color: mat.get-color-from-palette($ppw-ui-accent);
}

.table-container::-webkit-scrollbar {
    width: 8px;
    height: 8px;
    border-radius: 5px;
    background-color: #ddd;
}

.table-container::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: mat.get-color-from-palette($ppw-ui-primary);
}

.table-container::-webkit-scrollbar-button,
.table-container::-webkit-scrollbar-track,
.table-container::-webkit-scrollbar-track-piece,
.table-container::-webkit-scrollbar-corner,
.table-container::-webkit-resizer {
    display: none;
}

.table-container::-webkit-scrollbar-track-piece:start {
    margin-top: 200px;
}

div.page-toggles {
    mat-slide-toggle {
        div.mdc-form-field {
            label {
                color: white;
            }
        }
    }
}

